[gd_scene load_steps=2 format=3 uid="uid://rr3808vus5ow"]

[ext_resource type="Script" path="res://scripts/Auth.gd" id="1_vapat"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vapat")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -347.0
offset_right = 276.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 45
text = "Iniciar Sesión"

[node name="label_us" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Correo
"

[node name="txtUsuario" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 40
text = "std1@example.com"

[node name="label_pass" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Contraseña"

[node name="txtClave" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 40
text = "admin222"
secret = true

[node name="tbnIniciarSesion" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 50
text = "Ingresar"

[node name="loginReq" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/tbnIniciarSesion" to="." method="_on_tbn_iniciar_sesion_pressed"]
[connection signal="request_completed" from="loginReq" to="." method="_on_login_req_request_completed"]
